# fullsend

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CLAUDE.md  CODEOWNERS  Makefile  README.md  go.mod  go.sum
.github/workflows/: branch-cleanup.yml  e2e.yml  evals.yml  lint.yml  mindmap.yml  release.yml  secretarial-agent.yml  site-build.yml  site-deploy.yml
agents/: code.md  retro.md  review.md
cmd/fullsend/: main.go
cmd/secretarial-agent/: main.go
dispatch/cli/: go.mod  main.go
docs/: architecture.md  glossary.md  index.html  landscape.md  methodology.md  mindmap.html  problem-map.md  roadmap.md  secretarial-agent.md  site-deployment.md  vision.md
docs/ADRs/: 0000-adr-template.md  0001-use-adrs-for-decision-making.md  0002-initial-fullsend-design.md  0004-forge-abstraction-layer.md  0004-go-as-implementation-language.md  0005-forge-abstraction-layer.md  0005-ordered-layer-model.md  0005-unidirectional-control-flow.md  0006-forge-abstraction-layer.md  (+15 more)
experiments/: 003-agent-outage-fire-drill.md  openshell-sandbox-evaluation.md
experiments/adr46-scanner/: config.yaml  pyproject.toml
experiments/adr46-scanner/scanner/: __main__.py  cli.py  config.py  detector.py  parser.py  scan.py
experiments/adr46-scanner/tests/: test_cli.py  test_config.py  test_detector.py  test_modelcar.py  test_parser.py  test_scan.py
experiments/adr46-scanner/tests/fixtures/: sample-task.yaml
hack/: clean-stale-branches  lint-adr-frontmatter  lint-adr-numbers  lint-adr-status
scripts/: run-code-agent.sh  scan-secrets
site/: wrangler.toml
(+3679 files in other folders)
